tests/typing/pass/array/array_post.act
contract A

constructor()

creates

  uint[3] x := [1, 2, 3]

transition f()

iff
  x == [1,2,3]

updates

  x[0] := 3
  x[1] := 2
  x[2] := 1

ensures
  post(x) == (if pre(x) == [1,2,3] then [3,2,1] else [0,0,0])
